force-app/main/default/objects/Manager1__c/Manager1__c.object-meta.xml
<CustomObject>
    <description>This object stores the all the Managers that are working in an organization.</description>
    <label>Manager1</label>
    <nameField>
        <label>Manager1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Managers1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>