force-app/main/default/objects/Manager1__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email ID of Manager</description>
    <inlineHelpText>Email ID of Manager</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>