force-app/main/default/objects/Manager1__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Location of the Manager</description>
    <inlineHelpText>Stores the Location of the Manager</inlineHelpText>
    <label>Location</label>
    <referenceTo>Work_Location__c</referenceTo>
    <relationshipLabel>Managers1</relationshipLabel>
    <relationshipName>Managers1</relationshipName>
    <type>Lookup</type>
</CustomField>