force-app/main/default/objects/Manager1__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone of manager</description>
    <inlineHelpText>Phone of manager</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>