force-app/main/default/objects/Manager1__c/fields/Project1__c.field-meta.xml
<CustomField>
    <fullName>Project1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Delivery Manager for the Project</description>
    <inlineHelpText>Delivery Manager for the Project</inlineHelpText>
    <label>Project1</label>
    <referenceTo>Project1__c</referenceTo>
    <relationshipLabel>Managers1</relationshipLabel>
    <relationshipName>Managers1</relationshipName>
    <type>Lookup</type>
</CustomField>